@@ -90,6 +90,8 @@ Improvements
 * SOLR-10470: Introduce Builder setter for parallelCacheRefreshes on cloud SolrClients.  Deprecated
   direct setter setParallelCacheRefreshes on cloud SolrClients. (Eric Pugh, David Smiley, Alex Deparvu)
 
+* SOLR-16616: JWTAuthPlugin: Read trusted X509 certificates from multiple files (janhoy)
+
 * SOLR-15787: FileSystemConfigSetService: implement the abstraction completely.  It could be useful
   for putting ConfigSets on a shared file system.  (Nazerke Seidan, David Smiley)
 
